--- a/kubernetes-manifest.yml
+++ b/kubernetes-manifest.yml
@@ -20,10 +20,19 @@ spec:
           restartPolicy: Always
           containers:
           - name: koala-attachment-handler-service
-            image: ykdbonteregistry.azurecr.io/koala-attachment-handler-service:v1
+            image: ykdbonteregistry.azurecr.io/koala-attachment-handler-service:latest
+            resources:
+              requests:
+                cpu: 500m
+                memory: 256Mi
+              limits:
+                cpu: 1000m
+                memory: 500Mi
             imagePullPolicy: Always
             ports:
               - containerPort: 5001
             env:
               - name: DOTNET_ENVIRONMENT
                 value: "Production"
+          imagePullSecrets:
+          - name: ykdbonteregistry
